✨ Version controlling as its best ✨
- Add new global interval calculator utility (more like a service)
- Delete per-day endpoint
- Delete GET /product/.../sales
- Add new /product/.../sales/{interval} endpoint
- Reorganize utility TS files and functions
