# src/routes/product.routes.ts
@@ -8,7 +8,6 @@ import {
 import {
   deleteSaleByIdController,
   getSalesByProductIdController,
-  getSalesPerDayByProductIdController,
   postNewSaleController,
 } from "../controllers/sales.controller";
 
@@ -18,9 +17,8 @@ router.post("/", postProductController);
 router.get("/:id", getProductByIdController);
 router.delete("/:id", deleteProductByIdController);
 router.get("/", getAllProductsController);
-router.get("/:id/sales", getSalesByProductIdController);
+router.get("/:id/sales/:interval", getSalesByProductIdController);
 router.post("/:id/sales", postNewSaleController);
-router.get("/:id/sales/per-day", getSalesPerDayByProductIdController);
 router.delete("/:productId/sales/:saleId", deleteSaleByIdController);
 
 export { router as productRoutes };
